<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:background="@color/Black">

    <TextView
        android:id="@+id/export_cover_editor"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:drawableTop="@drawable/eo_export_cover_editor"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/eo_export_cover_editor"
        android:textColor="@color/TextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/export_scape"
        app:layout_constraintEnd_toStartOf="@+id/export_scape" />

    <Space
        android:id="@+id/export_scape"
        android:layout_width="42dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toTopOf="@+id/export_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/export_resolution"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:drawableTop="@drawable/eo_export_resolution_540"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/eo_export_resolution"
        android:textColor="@color/TextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/export_scape"
        app:layout_constraintStart_toEndOf="@+id/export_scape" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/export_cover_editor_top_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="export_cover_editor,export_resolution" />

    <TextView
        android:id="@+id/export_action"
        android:layout_width="209dp"
        android:layout_height="44dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/eo_main_editor_bg_selector"
        android:gravity="center"
        android:text="@string/eo_export_main"
        android:textColor="@color/TextPrimary1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/export_scape"
        app:layout_constraintVertical_chainStyle="spread_inside" />
</androidx.constraintlayout.widget.ConstraintLayout>