<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/BGPrimary2"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/resolution_title"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:textSize="14dp"
        android:gravity="center"
        android:text="@string/eo_export_resolution"
        android:textColor="@color/TextTertiary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resolution_list"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resolution_title">

        <TextView
            android:id="@+id/resolution_540p"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/eo_export_resolutionfps_bg_selector"
            android:gravity="center"
            android:text="540P"
            android:textSize="13dp"
            android:textColor="@drawable/eo_export_resolutionfps_title_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/resolution_720p"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resolution_720p"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:background="@drawable/eo_export_resolutionfps_bg_selector"
            android:gravity="center"
            android:text="720P"
            android:textSize="13dp"
            android:textColor="@drawable/eo_export_resolutionfps_title_selector"
            app:layout_constraintEnd_toStartOf="@id/resolution_1080p"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/resolution_540p"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resolution_1080p"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:background="@drawable/eo_export_resolutionfps_bg_selector"
            android:gravity="center"
            android:text="1080P"
            android:textSize="13dp"
            android:textColor="@drawable/eo_export_resolutionfps_title_selector"
            app:layout_constraintEnd_toStartOf="@id/resolution_4k"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/resolution_720p"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resolution_4k"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:background="@drawable/eo_export_resolutionfps_bg_selector"
            android:gravity="center"
            android:text="4K"
            android:textSize="13dp"
            android:textColor="@drawable/eo_export_resolutionfps_title_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/resolution_1080p"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/fps_title"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/eo_export_frameRate"
        android:textSize="14dp"
        android:textColor="@color/TextTertiary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resolution_list" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fps_list"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fps_title">

        <TextView
            android:id="@+id/fps_25"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/eo_export_resolutionfps_bg_selector"
            android:gravity="center"
            android:text="25FPS"
            android:textSize="13dp"
            android:textColor="@drawable/eo_export_resolutionfps_title_selector"
            app:layout_constraintEnd_toStartOf="@id/fps_30"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fps_30"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:background="@drawable/eo_export_resolutionfps_bg_selector"
            android:gravity="center"
            android:text="30FPS"
            android:textSize="13dp"
            android:textColor="@drawable/eo_export_resolutionfps_title_selector"
            app:layout_constraintEnd_toStartOf="@id/fps_50"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/fps_25"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fps_50"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:background="@drawable/eo_export_resolutionfps_bg_selector"
            android:gravity="center"
            android:text="50FPS"
            android:textSize="13dp"
            android:textColor="@drawable/eo_export_resolutionfps_title_selector"
            app:layout_constraintEnd_toStartOf="@id/fps_60"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/fps_30"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fps_60"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:background="@drawable/eo_export_resolutionfps_bg_selector"
            android:gravity="center"
            android:text="60FPS"
            android:textSize="13dp"
            android:textColor="@drawable/eo_export_resolutionfps_title_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/fps_50"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fps_list">

        <TextView
            android:id="@+id/resolution_fps_reset"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:background="@drawable/eo_export_resolution_reset"
            android:gravity="center"
            android:text="@string/eo_export_resolution_reset"
            android:textSize="15dp"
            android:textColor="@color/TextPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/resolution_fps_save"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/resolution_fps_save"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginLeft="14dp"
            android:background="@drawable/eo_export_resolution_save"
            android:gravity="center"
            android:text="@string/eo_export_resolution_save"
            android:textSize="15dp"
            android:textColor="@color/TextPrimary1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/resolution_fps_reset"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
